--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/svelte": "^3.0.0",
     "babel-jest": "^25.4.0",
     "jest": "^25.4.0",
+    "jest-svelte-resolver": "^1.0.0",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
